--- a/app/src/main/res/layout/activity_top_bar.xml
+++ b/app/src/main/res/layout/activity_top_bar.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:topBar="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activity.top.TopBarActivity">
+    android:layout_height="match_parent">
+
+    <com.custom.top.TopBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        topBar:leftImgIsShow="true"
+        topBar:leftImg="@mipmap/top_bar_back"
+        topBar:leftText="222"
+        topBar:centerText="333"
+        topBar:rightText="555"
+        topBar:rightImgIsShow="true"
+        topBar:rightImg="@mipmap/top_bar_back"
+        android:background="#000000"
+       />
 
 </RelativeLayout>
