drabable resource bitmap

--- a/app/src/main/res/layout/custom_border_txt.xml
+++ b/app/src/main/res/layout/custom_border_txt.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+<!--    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -19,5 +19,5 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="售价:99.80" />
-    </LinearLayout>
+    </LinearLayout>-->
 </RelativeLayout>
