finish nine patch

--- a/app/src/main/res/layout/activity_reaource_drawable.xml
+++ b/app/src/main/res/layout/activity_reaource_drawable.xml
@@ -3,18 +3,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <!-- bitmap -->
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:src="@drawable/resource_drawable_bitmap" />
+        android:src="@drawable/resource_drawable_bitmap"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@drawable/resource_drawable_bitmap">
+        android:background="@drawable/resource_drawable_bitmap"
+        android:visibility="gone">
 
+    </LinearLayout>
+    <!-- nine patch -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="40dp"
+            android:src="@mipmap/nine_patch" />
+
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@mipmap/nine_patch" />
+
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/resource_drawable_nine_patch" />
     </LinearLayout>
 </LinearLayout>
