--- a/app/src/main/res/drawable/resource_drawable_clip.xml
+++ b/app/src/main/res/drawable/resource_drawable_clip.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<clip>
-
+<clip xmlns:android="http://schemas.android.com/apk/res/android"
+    android:clipOrientation="horizontal"
+    android:drawable="@mipmap/reasource_drawable_mn3"
+    android:gravity="center">
 </clip>
