--- a/app/src/main/res/drawable/resource_drawable_shape_ring.xml
+++ b/app/src/main/res/drawable/resource_drawable_shape_ring.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:innerRadiusRatio="3"
+    android:innerRadius="50dp"
     android:shape="ring"
-    android:thicknessRatio="8"
+    android:thickness="10dp"
     android:useLevel="false">
     <solid android:color="@color/red" />
-    <size android:width="40dp" android:height="40dp"/>
 </shape>
