--- a/app/src/main/res/layout/activity_reaource_drawable.xml
+++ b/app/src/main/res/layout/activity_reaource_drawable.xml
@@ -232,8 +232,8 @@
             android:layout_weight="1">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:src="@drawable/resource_drawable_shape_ring" />
         </RelativeLayout>
