--- a/app/src/main/res/layout/custom_border_txt.xml
+++ b/app/src/main/res/layout/custom_border_txt.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 
-<!--    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:background=""
-        android:orientation="vertical">
+        android:background="@drawable/custom_border_txt_bg"
+        android:orientation="vertical"
+        android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
@@ -18,6 +20,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="售价:99.80" />
-    </LinearLayout>-->
+            android:text="售价:99.80元" />
+    </LinearLayout>
 </RelativeLayout>
