--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="blue">#6666FF</color>
     <color name="red">#FF3300</color>
     <color name="green">#66FF33</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray">#C0C0C0</color>
+    <color name="border_txt_color_default">#3399FF</color>
 </resources>
