完成自定义控件3

--- a/app/src/main/res/layout/activity_border_txt.xml
+++ b/app/src/main/res/layout/activity_border_txt.xml
@@ -1,25 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:borderTxt="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <com.custom.controls.button.BorderTxt
         android:id="@+id/btt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="120dp"
         android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         borderTxt:bt_text1="第一行"
-        borderTxt:bt_text2="第二行"></com.custom.controls.button.BorderTxt>
+        borderTxt:bt_text2="第二行" />
 
     <TextView
         android:id="@+id/bbbb"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/btt"
+        android:layout_centerHorizontal="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:gravity="center"
+        android:text="textView结合selector点击改变文字颜色"
+        android:textColor="@color/custom_border_txt_color"
+        android:textSize="14sp"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <com.custom.controls.button.BorderTxt
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            borderTxt:bt_text1="10元"
+            borderTxt:bt_text2="售价10.00元" />
+
+        <com.custom.controls.button.BorderTxt
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            borderTxt:bt_checkable="true"
+            borderTxt:bt_text1="20元"
+            borderTxt:bt_text2="售价20.00元" />
+
+        <com.custom.controls.button.BorderTxt
+            android:id="@+id/border_txt_flow"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            borderTxt:bt_text1="30M" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_change_border_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btt"
-        android:text="文字大小对比"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/custom_border_txt_color"
-        android:gravity="center"
-        android:textSize="14sp" />
-</RelativeLayout>
+        android:text="改变按钮可选与否"></Button>
+</LinearLayout>
